syntax = "proto3";
package deviceapi;

message EmptyResponse {
}

message AppDownloadReq {
    string app_name = 1;
}

message AppUpdateReq {
    string app_name = 1;
}

message AppDeleteReq {
    string app_name = 1;
}

// check_update api
message CheckUpdateRes {
    string se_id = 1;
    string sn = 2;
    string status = 3;
    string sdk_mode = 4;
    repeated AvailableAppBean available_app_list = 5;
}

message AvailableAppBean {
    string app_name = 1;
    string app_logo = 2;
    string installed_version = 3;
    string last_updated = 4;
    string latest_version = 5;
    string install_mode = 6;
}

message BindCheckReq {
    string file_path = 1;
}

message BindCheckRes {
    string bind_status = 1;
}

message BindAcquireReq {
    string bind_code = 1;
}

message BindAcquireRes {
    string bind_result = 1;
}

message GetSeidRes {
    string seid = 1;
}

message GetSnRes {
    string sn = 1;
}

message GetRamSizeRes {
    string ram_size = 1;
}

message GetFirmwareVersionRes {
    string firmware_version = 1;
}

message GetBatteryPowerRes {
    string battery_power = 1;
}

message GetLifeTimeRes {
    string life_time = 1;
}

message GetBleNameRes {
    string ble_name = 1;
}

message SetBleNameReq {
    string ble_name = 1;
}

message GetBleVersionRes {
    string ble_version = 1;
}

message GetSdkInfoRes {
    string sdk_version = 1;
}